# ML

./: README.md  pyproject.toml
data/processed/: Juegorawg_limpio.csv  Videojuegos_ml
models/trained/: Mi_modelo.pkl
notebooks/: Eda_Juegos.ipynb  MLserietemporal.ipynb  Mejoradode_eda.ipynb  Memoria.ipynb  ModeloXGBOOST copy 2.ipynb  ModeloXGBOOST copy.ipynb  PRUEBASPARTE2.ipynb  Procesado.ipynb  Procesado_cla.ipynb  Procesado_cla_gradient.ipynb  Procesado_final.ipynb  Procesadomejor.ipynb  Prueba_Regresion.ipynb  Prueba_claude_Clasificacion.ipynb  Pruebas_ML.ipynb
src/: Clase_Andres.py  Ml.py  data_cleaning.py  train.py
