
[tool.poetry]
name = "ML"
version = "0.1.0"
description = "Proyecto de Machine Learning"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.2.3"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
mlflow = "^2.20.2"
dvc = "^3.59.1"
ipykernel = "^6.29.5"
notebook = "^7.3.2"
xgboost = "^2.1.4"
imblearn = "^0.0"
joblib = "^1.4.2"
statsmodels = "^0.14.4"
lightgbm = "^4.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py311']
